# ml-algorithms-from-scratch

./: README.md  main.py  pyproject.toml
.ipynb_checkpoints/: banglore_home_prices_final-checkpoint.ipynb
01_numpy/: Untitled1.ipynb  numpy.ipynb
01_numpy/.ipynb_checkpoints/: numpy-checkpoint.ipynb
02_pandas/1_intro/: pandas_intro_movies_final.ipynb
02_pandas/2_dataframe_basics/: dataframe_basics.ipynb  practice2.ipynb  tutorial.ipynb
02_pandas/2_dataframe_basics/Exercise/: dataframe_basics_exercise.ipynb
02_pandas/3_read_write_to_excel/: practice.ipynb
02_pandas/3_read_write_to_excel/Exercises/: final_movie_data.csv  read_write_csv_excel_exercise.ipynb
02_pandas/4_handling_missing_data_fillna_dropna_interpolate/Exercises/: final_data.cs  handling_missing_data_fillna_dropna_exercise.ipynb  handling_missing_data_fillna_dropna_exercise_solution.ipynb
02_pandas/8_matplotlib_seaborn/: matplotlib_seaborn_tutorial.ipynb
03_normal_distribution/: practice.ipynb
04_linear_reg/1_linear_reg_single/: practice.ipynb
04_linear_reg/2_linear_reg_multiple/: Untitled.ipynb
04_linear_reg/4_one_hot_encoding/: Untitled.ipynb  practice3.ipynb
05_logistic_regression/: Untitled.ipynb  Untitled1.ipynb  practice-2.ipynb
07_k_fold_cross_validation/: practice1.ipynb
08_k_means_clustering_algo/: Untitled.ipynb
09_naive_bayes/: practice1.ipynb
10_k_nearest_neighbor/: Untitled.ipynb
feature_engineering/: Untitled.ipynb  Untitled1.ipynb
feature_engineering/z_score/: Untitled.ipynb  practice2.ipynb
project/: banglore_home_prices_final.ipynb
(+5 files in other folders)
